<resources>
    <string name="app_name">myHomT</string>
    <string name="id">ID</string>
    <string name="id_hint">아이디를 입력해주세요</string>
    <string name="pw">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="pw_confirm">비밀번호 확인</string>
    <string name="pw_confirm_hint">비밀번호를 다시 한번 입력해주세요</string>
    <string name="logo_description">Application Logo</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="preview">앱 둘러보기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>

</resources>