<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/login"
        android:textColor="#2B3154"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="38dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingVertical="6sp"
            android:text="@string/id"
            android:textColor="#363E6D"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/id_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autofillHints="id"
            android:ems="10"
            android:hint="@string/id_hint"
            android:inputType="textPersonName"
            android:textColor="#A1AAE2"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingVertical="6sp"
            android:text="@string/pw"
            android:textColor="#363E6D"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pw_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autofillHints="pw"
            android:ems="10"
            android:hint="@string/pw_hint"
            android:inputType="textPersonName"
            android:textColor="#A1AAE2"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/login_submit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/button_ver2"
        android:onClick="set_Main"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>